# e2

./: .gitignore  .gitignore.swp  .project  README.md
ann/: Makefile  (+3 more)
e2_apps_rosbuild/kinect_motor/: CMakeLists.txt
e2_apps_rosbuild/kinect_motor/msg/: KinectAction.msg  KinectActionResult.msg
e2_apps_rosbuild/mrbrian/: CMakeLists.txt  manifest.xml  readme.txt
e2_apps_rosbuild/mrbrian/cmake/: FindATK.cmake
e2_launch/: CMakeLists.txt  kinect_fr.launch  mainpage.dox  manifest.xml  package.xml
e2_launch/launch/: amcl_diff.launch  e2_create_ambient_map.launch  e2_fake_real_robot.launch  e2_gmapping.launch  e2_navigation.launch  e2_neck_controller.launch  e2_odometry.launch  e2_real_robot.launch  e2_robot.launch  e2_robot_ambient_map.launch  e2_robot_client.launch  e2_robot_minimal.launch  e2_robot_server.launch  e2_robot_without_amcl.launch  e2_scanner.launch  e2_sim_move.launch  e2_simulation_robot.launch  face_recognition.launch  kinect_fr.launch  move_base.launch  odom_test.launch  odom_test_bag.launch  openni.launch  simulation_robot.launch  simulation_scanner.launch
e2_launch/launch/components/: e2_brain.launch  e2_face_recognition.launch  e2_head_analyze.launch  e2_navigation.launch  e2_neck_controller.launch  e2_scanner.launch  e2_speech_recognition.launch
e2_launch/launch/config/: robot.rviz  simulation.rviz
e2_launch/launch/test/: amcl_tune.launch  e2_odometry.launch  fr_test.launch  kinect_fr_test.launch  odom_bag_test.launch  odom_test.launch  odom_test_bag.launch  voice_test.launch
e2_localization/: CMakeLists.txt  package.xml
e2_localization/src/: e2_localization.cpp  localization.cpp  localization_lib.cpp
e2_msgs/: CMakeLists.txt  package.xml
e2_msgs/msg/: EncoderStamped.msg
e2_msgs/srv/: Goto.srv  MotorAngle.srv  NeckAction.srv  Talk.srv  Train.srv
e2_nav_messages/: CMakeLists.txt  package.xml
e2_nav_messages/src/: e2_nav_messages.cpp
e2_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
e2_navigation/action/: Nav.action
e2_navigation/base_config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
e2_navigation/config/: airlab_marker_config.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  marker_config.yaml  marker_positions.yaml  speech_config.yaml  stand_map.yaml
e2_navigation/include/e2_navigation/: e2_struct.h
e2_navigation/include/vrep_common/: ForceSensorData.h  ObjectGroupData.h  ProximitySensorData.h  VisionSensorDepthBuff.h  VrepInfo.h  simRosAddStatusbarMessage.h  simRosAppendStringSignal.h  simRosAuxiliaryConsoleShow.h  simRosBreakForceSensor.h  simRosClearFloatSignal.h  simRosClearStringSignal.h  simRosCreateDummy.h  simRosDisablePublisher.h  simRosDisableSubscriber.h  simRosDisplayDialog.h  simRosGetAndClearStringSignal.h  simRosGetIntegerParameter.h  simRosGetJointMatrix.h  simRosGetJointState.h  simRosGetLastErrors.h  simRosGetModelProperty.h  simRosGetObjectSelection.h  simRosGetStringSignal.h  simRosGetUIButtonProperty.h  simRosGetUIHandle.h  simRosGetVisionSensorImage.h  simRosLoadScene.h  (+10 more)
e2_navigation/launch/: amcl_diff.launch  e2_gmapping.launch  e2_marker_localization.launch  e2_sim_move.launch  face_recognition.launch  move_base.launch  scanner.launch
e2_navigation/msg/: RobotAction.msg
e2_navigation/src/: Navigation.cpp  Navigation.h  RobotInterface.cpp  RobotInterface.h  common.h  e2_brain.cpp  e2_joystick.cpp  e2_localization.cpp  e2_navigator.cpp  e2_navigator_new.cpp  e2_navigator_simple.cpp  nav.cpp  nav_node.cpp  navigator.cpp  yaml-operator.h
e2_neck_controller/: CMakeLists.txt  package.xml
e2_neck_controller/action/: Neck.action
e2_neck_controller/msg/: NeckAction.msg
e2_neck_controller/src/: E2_Pololu_Interface.cpp  E2_Pololu_Interface.h  NeckInterface.cpp  NeckInterface.h  PololuCommunication.cpp  SerialCommunication.cpp  SerialCommunication.h  neck.cpp  neck_client.cpp
e2_odometry/: CMakeLists.txt  package.xml
e2_odometry/launch/: odometry.launch
e2_odometry/msg/: EncoderStamped.msg
e2_odometry/src/: odometry.cpp  odometry.h  odometry_pub.cpp  tf_pub.cpp
e2_pointcloud_to_laserscan/: CMakeLists.txt  package.xml
e2_pointcloud_to_laserscan/src/: cloud_to_scan.cpp
face_recognition/: CMakeLists.txt  manifest.xml  package.xml
face_recognition/action/: FaceRecognition.action
face_recognition/backup/: 1_Lorenzo13.pgm  1_Lorenzo2.pgm  1_Lorenzo20.pgm  1_guest1.pgm  1_guest10.pgm  1_guest12.pgm  1_guest14.pgm  1_guest18.pgm  1_guest19.pgm  1_guest23.pgm  1_guest24.pgm  1_guest25.pgm  2_IronSock1.pgm  2_IronSock10.pgm  2_IronSock13.pgm  2_IronSock14.pgm  2_IronSock16.pgm  2_IronSock17.pgm  2_IronSock18.pgm  2_IronSock19.pgm  2_IronSock2.pgm  2_IronSock20.pgm  2_IronSock3.pgm  2_IronSock4.pgm  2_IronSock6.pgm  2_IronSock8.pgm  2_IronSock9.pgm
face_recognition/config/: train.txt
face_recognition/data/: 1_Lorenzo15.pgm  1_Lorenzo21.pgm  1_Lorenzo3.pgm  1_Lorenzo4.pgm  1_Lorenzo5.pgm  1_Lorenzo7.pgm  1_Lorenzo8.pgm  1_guest11.pgm  1_guest16.pgm  1_guest17.pgm  1_guest22.pgm  1_guest6.pgm  1_guest9.pgm  2_IronSock11.pgm  2_IronSock12.pgm  2_IronSock15.pgm  2_IronSock21.pgm  2_IronSock22.pgm  2_IronSock23.pgm  2_IronSock24.pgm  2_IronSock25.pgm  2_IronSock5.pgm  2_IronSock7.pgm
face_recognition/launch/: face_recognition.launch
face_recognition/src/: face_rec_client.cpp  face_recognition.cpp  face_recognition_lib.cpp
head_analyzer/: CMakeLists.txt  package.xml
head_analyzer/classifier/: dataset-binary.dts~  moveClassifier.dts  moveClassifier_Denying_Deby02.dts~
head_analyzer/launch/: head_analyzer.launch
head_analyzer/msg/: EyesDataMSG.msg  MoveDataMSG.msg
head_analyzer/src/: Blob.h  Classifiers.cpp  PointNDDataset.cpp  PointNDDataset.h  head_analyzer.cpp
kinect_motor/: CMakeLists.txt  package.xml
kinect_motor/action/: Kinect.action
kinect_motor/src/: kinect_motor.cpp
user_tracker/: CMakeLists.txt  package.xml
user_tracker/msg/: Com.msg
user_tracker/src/: user_tracker.cpp
(+498 files in other folders)
