<?xml version="1.0"?>
<package>
  <name>e2_launch</name>
  <version>0.0.2</version>
  <description>The e2_launch package for e2 robot</description>

  <maintainer email="ripani.lorenzo@gmail.com">Lorenzo Ripani</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/boottp/e2/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  
  </export>

</package>
