<?xml version="1.0"?>
<package>
  <name>e2_localization</name>
  <version>0.0.1</version>
  <description>The e2_localization package gives new position to e2 robot using markers</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ripani.lorenzo@gmail.com">Lorenzo Ripani</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://github.com/boottp/e2</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
