<?xml version="1.0"?>
<package>
  <name>e2_navigation</name>
  <version>0.0.1</version>
  <description>The e2_navigation package</description>

  <maintainer email="ripani.lorenzo@gmail.com">Lorenzo Ripani</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/boottp/e2/</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>e2_neck_controller</build_depend>
  <build_depend>face_recognition</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>e2_neck_controller</run_depend>
  <run_depend>face_recognition</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>