<?xml version="1.0"?>
<package>
  <name>e2_neck_controller</name>
  <version>0.0.1</version>
  <description>The e2_neck_controller package controls movement of e2 robot neck</description>

  <maintainer email="ripani.lorenzo@gmail.com">Lorenzo Ripani</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/boottp/e2/</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
