<?xml version="1.0"?>
<package>
  <name>e2_pointcloud_to_laserscan</name>
  <version>0.0.1</version>
  <description>The e2_pointcloud_to_laserscan package</description>

  <maintainer email="ripani.lorenzo@gmail.com">Lorenzo Ripani</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/boottp/e2/</url>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>